Cleaning some stuff up.

--- a/snmp-info-retriever/reportTemplate.html
+++ b/snmp-info-retriever/reportTemplate.html
@@ -1,7 +1,11 @@
 <html>
     <head></head>
     <body>
-        <h1>Meow Meow :3</h1>
-        <img width="100%" src={{ imageFile }} />
+        <h1>Reporte de Monitoreo de Agente</h1>
+        <img width="100%" src={{ ifGraphFile }} />
+        <img width="100%" src={{ ipGraphFile }} />
+        <img width="100%" src={{ icmpGraphFile }} />
+        <img width="100%" src={{ tcpGraphFile }} />
+        <img width="100%" src={{ udpGraphFile }} />
     </body>
 </html>
