--- a/snmp-flow-control/reportTemplate.html
+++ b/snmp-flow-control/reportTemplate.html
@@ -19,17 +19,16 @@
             Tiempo activo en ms: {{ agentSysUpTime }}
         </div>
         <div>
-            Comunidad: {{ agentCommunity }}
-        </div>
-        <div>
             Contacto: {{ agentSysContact }}
         </div>
         <div>
             Ubicación: {{ agentSysLocation }}
         </div>
         <h2>Información del dispositivo:</h2>
-        <img width="100%" src={{ memoryGraphFile }} />
-        <img width="100%" src={{ diskGraphFile }} />
-        <img width="100%" src={{ cpuGraphFile }} />
+        <img width="100%" src={{ ifGraphFile }} />
+        <img width="100%" src={{ ipGraphFile }} />
+        <img width="100%" src={{ icmpGraphFile }} />
+        <img width="100%" src={{ tcpGraphFile }} />
+        <img width="100%" src={{ udpGraphFile }} />
     </body>
 </html>
