--- a/snmp-flow-control/reportTemplate.html
+++ b/snmp-flow-control/reportTemplate.html
@@ -29,6 +29,7 @@
         </div>
         <h2>Información del dispositivo:</h2>
 
-        <img width="100%" src={{ bwGraphFile }} />
+        <img width="100%" src={{ inBwGraphFile }} />
+        <img width="100%" src={{ outBwGraphFile }} />
     </body>
 </html>
